--- a/EF25HealthApp/CustomView/CustomView.xib
+++ b/EF25HealthApp/CustomView/CustomView.xib
@@ -7,7 +7,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CustomView" customModule="EF25NavigationApp" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CustomView" customModule="EF25HealthApp" customModuleProvider="target">
             <connections>
                 <outlet property="label" destination="1dG-pl-Tyv" id="BJC-Cf-DWv"/>
                 <outlet property="text" destination="JFU-f6-IG2" id="d8v-Ft-qw5"/>
@@ -16,23 +16,23 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="CustomView">
-            <rect key="frame" x="0.0" y="0.0" width="393" height="84"/>
+            <rect key="frame" x="0.0" y="0.0" width="393" height="88"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="oY3-RZ-me6">
-                    <rect key="frame" x="0.0" y="0.0" width="393" height="83.333333333333329"/>
+                    <rect key="frame" x="0.0" y="0.0" width="393" height="87.333333333333329"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="First name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1dG-pl-Tyv">
-                            <rect key="frame" x="0.0" y="0.0" width="393" height="19.333333333333332"/>
+                            <rect key="frame" x="0.0" y="0.0" width="393" height="23.333333333333332"/>
                             <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
                             <color key="textColor" name="Neutral15"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6o0-6z-UJa">
-                            <rect key="frame" x="0.0" y="31.333333333333329" width="393" height="52"/>
+                            <rect key="frame" x="0.0" y="35.333333333333336" width="393" height="52.000000000000007"/>
                             <subviews>
                                 <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter first name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JFU-f6-IG2">
-                                    <rect key="frame" x="12" y="14.000000000000004" width="115" height="23.999999999999996"/>
+                                    <rect key="frame" x="12" y="14" width="115" height="24"/>
                                     <color key="backgroundColor" name="Neutral5"/>
                                     <color key="textColor" name="Neutral1"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
@@ -48,6 +48,7 @@
                             </constraints>
                         </view>
                     </subviews>
+                    <color key="backgroundColor" name="Background"/>
                 </stackView>
             </subviews>
             <color key="backgroundColor" name="Background"/>
@@ -63,7 +64,7 @@
     </objects>
     <resources>
         <namedColor name="Background">
-            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96470588235294119" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.95686274509803926" green="0.96470588235294119" blue="0.98039215686274506" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="Neutral1">
             <color red="0.17647058823529413" green="0.19215686274509805" blue="0.25882352941176473" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
