--- a/EF25HealthApp/Report/InputVC/InputVC.xib
+++ b/EF25HealthApp/Report/InputVC/InputVC.xib
@@ -1,22 +1,81 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="23727" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23721"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="InputVC" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="InputVC" customModule="EF25HealthApp" customModuleProvider="target">
             <connections>
+                <outlet property="addButton" destination="kl9-HJ-7Th" id="T0h-C2-ge4"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="view1" destination="CVj-uT-A4W" id="0oe-OB-hhX"/>
+                <outlet property="view2" destination="q3V-YE-w36" id="fcO-s3-qBI"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <subviews>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="530" translatesAutoresizingMaskIntoConstraints="NO" id="m5T-Bk-oCc">
+                    <rect key="frame" x="16" y="142" width="361" height="626"/>
+                    <subviews>
+                        <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="S3b-Br-ha2">
+                            <rect key="frame" x="0.0" y="0.0" width="361" height="40"/>
+                            <subviews>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CVj-uT-A4W" customClass="CustomView" customModule="EF25HealthApp" customModuleProvider="target">
+                                    <rect key="frame" x="0.0" y="0.0" width="172.66666666666666" height="40"/>
+                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                </view>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="q3V-YE-w36" customClass="CustomView" customModule="EF25HealthApp" customModuleProvider="target">
+                                    <rect key="frame" x="188.66666666666663" y="0.0" width="172.33333333333337" height="40"/>
+                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                </view>
+                            </subviews>
+                        </stackView>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kl9-HJ-7Th">
+                            <rect key="frame" x="0.0" y="570" width="361" height="56"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="56" id="QRQ-6X-hB6"/>
+                            </constraints>
+                            <state key="normal" title="Button"/>
+                            <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                            <connections>
+                                <action selector="addButtonTapped:" destination="-1" eventType="touchUpInside" id="lFF-Ro-88V"/>
+                            </connections>
+                        </button>
+                    </subviews>
+                    <constraints>
+                        <constraint firstAttribute="trailing" secondItem="kl9-HJ-7Th" secondAttribute="trailing" id="4q0-Pq-fW9"/>
+                        <constraint firstItem="S3b-Br-ha2" firstAttribute="leading" secondItem="m5T-Bk-oCc" secondAttribute="leading" id="63S-s7-cPK"/>
+                        <constraint firstItem="kl9-HJ-7Th" firstAttribute="leading" secondItem="m5T-Bk-oCc" secondAttribute="leading" id="pQJ-Wh-Hi4"/>
+                        <constraint firstAttribute="trailing" secondItem="S3b-Br-ha2" secondAttribute="trailing" id="qH4-aX-S2Y"/>
+                        <constraint firstItem="S3b-Br-ha2" firstAttribute="top" secondItem="m5T-Bk-oCc" secondAttribute="top" id="w2d-93-iG8"/>
+                    </constraints>
+                </stackView>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <color key="backgroundColor" name="Background"/>
+            <constraints>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="m5T-Bk-oCc" secondAttribute="trailing" constant="16" id="1EF-xB-SRa"/>
+                <constraint firstItem="m5T-Bk-oCc" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="9eh-0u-go8"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="m5T-Bk-oCc" secondAttribute="bottom" constant="16" id="DHO-vW-3KF"/>
+                <constraint firstItem="m5T-Bk-oCc" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="24" id="QFP-DQ-6LO"/>
+            </constraints>
+            <point key="canvasLocation" x="-11" y="-11"/>
         </view>
     </objects>
+    <resources>
+        <namedColor name="Background">
+            <color red="0.95686274509803926" green="0.96470588235294119" blue="0.98039215686274506" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
