--- a/EF25HealthApp/Report/ReportVC/TableViewCell/TrackDailyCell/TrackDailyCell.xib
+++ b/EF25HealthApp/Report/ReportVC/TableViewCell/TrackDailyCell/TrackDailyCell.xib
@@ -1,21 +1,93 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="23727" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23721"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="TrackDailyCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="TrackDailyCell" customModule="EF25HealthApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="343" height="80"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="343" height="80"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lKC-7s-6Va">
+                        <rect key="frame" x="0.0" y="0.0" width="343" height="80"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="HoC-Yr-7fT">
+                                <rect key="frame" x="16" y="16" width="311" height="48"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="P4j-UO-9wU">
+                                        <rect key="frame" x="0.0" y="0.0" width="311" height="28"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="like-heart" translatesAutoresizingMaskIntoConstraints="NO" id="Fol-bg-Oih">
+                                                <rect key="frame" x="0.0" y="0.0" width="28" height="28"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="28" id="KV0-2P-Aoq"/>
+                                                    <constraint firstAttribute="width" constant="28" id="wcg-Z9-USs"/>
+                                                </constraints>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Track daily" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ij6-uy-MBC">
+                                                <rect key="frame" x="28" y="0.0" width="283" height="28"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="28" id="GC8-Lh-kj4"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
+                                                <color key="textColor" name="Neutral1"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Click heart icon to log your data" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7ky-MO-Smq">
+                                        <rect key="frame" x="0.0" y="32" width="311" height="16"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <color key="textColor" name="Neutral2"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" name="Neutral5"/>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" name="Neutral5"/>
+                        <constraints>
+                            <constraint firstItem="HoC-Yr-7fT" firstAttribute="top" secondItem="lKC-7s-6Va" secondAttribute="top" constant="16" id="G0m-KV-8yL"/>
+                            <constraint firstAttribute="trailing" secondItem="HoC-Yr-7fT" secondAttribute="trailing" constant="16" id="PGY-3V-tQb"/>
+                            <constraint firstItem="HoC-Yr-7fT" firstAttribute="leading" secondItem="lKC-7s-6Va" secondAttribute="leading" constant="16" id="Ygp-pW-lpy"/>
+                            <constraint firstAttribute="bottom" secondItem="HoC-Yr-7fT" secondAttribute="bottom" constant="16" id="qER-Sk-Ne9"/>
+                        </constraints>
+                    </view>
+                </subviews>
+                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                <constraints>
+                    <constraint firstItem="lKC-7s-6Va" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="8Xl-Sh-zQG"/>
+                    <constraint firstAttribute="bottom" secondItem="lKC-7s-6Va" secondAttribute="bottom" id="S1A-kI-TaL"/>
+                    <constraint firstAttribute="trailing" secondItem="lKC-7s-6Va" secondAttribute="trailing" id="fTE-W9-tmm"/>
+                    <constraint firstItem="lKC-7s-6Va" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="kPk-dz-cVD"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="containerView" destination="lKC-7s-6Va" id="Ami-WI-o2F"/>
+            </connections>
+            <point key="canvasLocation" x="-170" y="0.0"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="like-heart" width="33" height="31"/>
+        <namedColor name="Neutral1">
+            <color red="0.17647058823529413" green="0.19215686274509805" blue="0.25882352941176473" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="Neutral2">
+            <color red="0.38039215686274508" green="0.41176470588235292" blue="0.49803921568627452" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="Neutral5">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
