--- a/EF25HealthApp/Settings/Profile/InformationVC/InformationVC.xib
+++ b/EF25HealthApp/Settings/Profile/InformationVC/InformationVC.xib
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="InformationVC" customModule="EF25NavigationApp" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="InformationVC" customModule="EF25HealthApp" customModuleProvider="target">
             <connections>
                 <outlet property="gender" destination="HRj-dL-oyY" id="fUt-VJ-iuX"/>
                 <outlet property="saveButton" destination="b20-Dw-RQX" id="71A-lZ-3KS"/>
@@ -25,29 +25,17 @@
             <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b20-Dw-RQX">
-                    <rect key="frame" x="16" y="712" width="360.66666666666669" height="56"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="56" id="bxj-Jz-65f"/>
-                    </constraints>
-                    <color key="tintColor" name="Neutral5"/>
-                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                    <state key="normal" title="Save"/>
-                    <connections>
-                        <action selector="saveButton:" destination="-1" eventType="touchUpInside" id="Fdx-H7-yQW"/>
-                    </connections>
-                </button>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="21" translatesAutoresizingMaskIntoConstraints="NO" id="lVb-y3-wwU">
                     <rect key="frame" x="15.666666666666657" y="142" width="362" height="232"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="6fa-kH-Jdi">
                             <rect key="frame" x="0.0" y="0.0" width="362" height="63.333333333333336"/>
                             <subviews>
-                                <view contentMode="scaleToFill" placeholderIntrinsicWidth="175" placeholderIntrinsicHeight="63.333333333333336" translatesAutoresizingMaskIntoConstraints="NO" id="LE0-6P-AZY" customClass="CustomView" customModule="EF25NavigationApp" customModuleProvider="target">
+                                <view contentMode="scaleToFill" placeholderIntrinsicWidth="175" placeholderIntrinsicHeight="63.333333333333336" translatesAutoresizingMaskIntoConstraints="NO" id="LE0-6P-AZY" customClass="CustomView" customModule="EF25HealthApp" customModuleProvider="target">
                                     <rect key="frame" x="0.0" y="0.0" width="175" height="63.333333333333336"/>
                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 </view>
-                                <view contentMode="scaleToFill" placeholderIntrinsicWidth="175" placeholderIntrinsicHeight="63.333333333333336" translatesAutoresizingMaskIntoConstraints="NO" id="oVW-GK-AAc" customClass="CustomView" customModule="EF25NavigationApp" customModuleProvider="target">
+                                <view contentMode="scaleToFill" placeholderIntrinsicWidth="175" placeholderIntrinsicHeight="63.333333333333336" translatesAutoresizingMaskIntoConstraints="NO" id="oVW-GK-AAc" customClass="CustomView" customModule="EF25HealthApp" customModuleProvider="target">
                                     <rect key="frame" x="187" y="0.0" width="175" height="63.333333333333336"/>
                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 </view>
@@ -78,11 +66,11 @@
                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="kJZ-o5-yZy">
                             <rect key="frame" x="0.0" y="168.66666666666669" width="362" height="63.333333333333343"/>
                             <subviews>
-                                <view contentMode="scaleToFill" placeholderIntrinsicWidth="175" placeholderIntrinsicHeight="63.333333333333336" translatesAutoresizingMaskIntoConstraints="NO" id="xMG-RA-Een" customClass="CustomView" customModule="EF25NavigationApp" customModuleProvider="target">
+                                <view contentMode="scaleToFill" placeholderIntrinsicWidth="175" placeholderIntrinsicHeight="63.333333333333336" translatesAutoresizingMaskIntoConstraints="NO" id="xMG-RA-Een" customClass="CustomView" customModule="EF25HealthApp" customModuleProvider="target">
                                     <rect key="frame" x="0.0" y="0.0" width="175" height="63.333333333333336"/>
                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 </view>
-                                <view contentMode="scaleToFill" placeholderIntrinsicWidth="175" placeholderIntrinsicHeight="63.333333333333336" translatesAutoresizingMaskIntoConstraints="NO" id="hQb-S2-VZw" customClass="CustomView" customModule="EF25NavigationApp" customModuleProvider="target">
+                                <view contentMode="scaleToFill" placeholderIntrinsicWidth="175" placeholderIntrinsicHeight="63.333333333333336" translatesAutoresizingMaskIntoConstraints="NO" id="hQb-S2-VZw" customClass="CustomView" customModule="EF25HealthApp" customModuleProvider="target">
                                     <rect key="frame" x="187" y="0.0" width="175" height="63.333333333333336"/>
                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 </view>
@@ -90,6 +78,18 @@
                         </stackView>
                     </subviews>
                 </stackView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b20-Dw-RQX">
+                    <rect key="frame" x="16" y="712" width="360.66666666666669" height="56"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="56" id="bxj-Jz-65f"/>
+                    </constraints>
+                    <color key="tintColor" name="Neutral5"/>
+                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                    <state key="normal" title="Save"/>
+                    <connections>
+                        <action selector="saveButton:" destination="-1" eventType="touchUpInside" id="Fdx-H7-yQW"/>
+                    </connections>
+                </button>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" name="Background"/>
@@ -107,7 +107,7 @@
     </objects>
     <resources>
         <namedColor name="Background">
-            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96470588235294119" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.95686274509803926" green="0.96470588235294119" blue="0.98039215686274506" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="Neutral15">
             <color red="0.34901960784313724" green="0.38039215686274508" blue="0.47843137254901963" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
