--- a/EF25HealthApp/Report/ReportVC/ReportVC.xib
+++ b/EF25HealthApp/Report/ReportVC/ReportVC.xib
@@ -32,14 +32,17 @@
                             </connections>
                         </button>
                         <tableView clipsSubviews="YES" contentMode="scaleToFill" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="gXn-VX-n0W">
-                            <rect key="frame" x="9" y="267" width="343" height="300"/>
+                            <rect key="frame" x="0.0" y="267" width="361" height="300"/>
                             <color key="backgroundColor" name="Background"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="343" id="Afd-vI-Fnd"/>
                                 <constraint firstAttribute="height" constant="300" id="f8V-TH-3ER"/>
                             </constraints>
                         </tableView>
                     </subviews>
+                    <constraints>
+                        <constraint firstAttribute="trailing" secondItem="gXn-VX-n0W" secondAttribute="trailing" id="0l6-1C-fcT"/>
+                        <constraint firstItem="gXn-VX-n0W" firstAttribute="leading" secondItem="rdb-BY-n3w" secondAttribute="leading" id="qlC-h1-Rbk"/>
+                    </constraints>
                 </stackView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
