--- a/EF25HealthApp/Activity/ActivityCell.xib
+++ b/EF25HealthApp/Activity/ActivityCell.xib
@@ -1,21 +1,88 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="23727" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23721"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="ActivityCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="ActivityCell" customModule="EF25HealthApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="144" height="164"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                <rect key="frame" x="0.0" y="0.0" width="144" height="164"/>
+                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UQU-tE-Mdk">
+                        <rect key="frame" x="0.0" y="0.0" width="144" height="164"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="co0-IW-TED">
+                                <rect key="frame" x="0.0" y="0.0" width="144" height="164"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="QxH-h9-iet">
+                                        <rect key="frame" x="0.0" y="0.0" width="144" height="54.666666666666664"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vA8-Oz-A47">
+                                                <rect key="frame" x="0.0" y="0.0" width="74" height="54.666666666666664"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="P0P-7n-aHj">
+                                                <rect key="frame" x="94" y="0.0" width="50" height="54.666666666666664"/>
+                                            </imageView>
+                                        </subviews>
+                                    </stackView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fDy-Ls-mRv">
+                                        <rect key="frame" x="0.0" y="54.666666666666671" width="144" height="54.666666666666671"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mUc-Wk-R37">
+                                        <rect key="frame" x="0.0" y="109.33333333333333" width="144" height="54.666666666666671"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" name="Neutral5"/>
+                            </stackView>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="co0-IW-TED" firstAttribute="leading" secondItem="UQU-tE-Mdk" secondAttribute="leading" id="Loz-hJ-tE3"/>
+                            <constraint firstItem="co0-IW-TED" firstAttribute="top" secondItem="UQU-tE-Mdk" secondAttribute="top" id="Osx-dP-ylC"/>
+                            <constraint firstAttribute="bottom" secondItem="co0-IW-TED" secondAttribute="bottom" id="mjg-XJ-zAX"/>
+                            <constraint firstAttribute="trailing" secondItem="co0-IW-TED" secondAttribute="trailing" id="pb1-D9-7eF"/>
+                        </constraints>
+                    </view>
+                </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <constraints>
+                <constraint firstItem="UQU-tE-Mdk" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="9ku-vU-qOt"/>
+                <constraint firstAttribute="bottom" secondItem="UQU-tE-Mdk" secondAttribute="bottom" id="9uS-0o-VKg"/>
+                <constraint firstItem="UQU-tE-Mdk" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="fQ8-eb-Dhg"/>
+                <constraint firstAttribute="trailing" secondItem="UQU-tE-Mdk" secondAttribute="trailing" id="yIJ-sb-Sae"/>
+            </constraints>
+            <size key="customSize" width="144" height="158"/>
+            <connections>
+                <outlet property="iconImg" destination="P0P-7n-aHj" id="vbl-11-wJT"/>
+                <outlet property="stackView" destination="co0-IW-TED" id="L84-OB-mbX"/>
+                <outlet property="titleLabel" destination="vA8-Oz-A47" id="gG8-4L-veh"/>
+                <outlet property="unitLabel" destination="mUc-Wk-R37" id="FMP-Ui-EYq"/>
+                <outlet property="valueLabel" destination="fDy-Ls-mRv" id="TmE-80-Wrh"/>
+            </connections>
+            <point key="canvasLocation" x="33.587786259541986" y="4.9295774647887329"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <namedColor name="Neutral5">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
